--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Cole Davis Portfolio"
+      content="Cole Davis Developer Portfolio"
     />
+    <meta property="og:image" content="https://cdn.pixabay.com/photo/2016/09/08/04/12/programmer-1653351_960_720.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
